# LearningRulesInAI

./: README.md
DeltaLearningRule/: main  main.cpp  test.cpp
Framework/: .clangd  .clangd_hidden_message  .~lock.mnist_train_clean.csv#  CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake  delta_rule.h  framework
Framework/Version2/: Makefile  handler.cpp  hebbian_rule.h  main.cpp  main_delta_backprop.cpp  nn_framework.h
Framework/Version2/src/: nn_framework.h  nn_funtions.cpp  read_csv_bind.cpp  read_data.py
Framework/docs/: main.aux  main.fdb_latexmk  main.fls  main.tex
Framework/docs/rules/: conv.tex  delta.tex  hebbian.tex  katyusha.tex
Framework/include/: ConvLayer.h  DataLoader.h  FeedForward.h  Functions.h  KatyushaLayer.h  Layer.h  Matrix.h  SequentialLayer.h  nn_framework.h
Framework/pyFiles/: mnist_train_clean.csv
Framework/src/: DataLoader.cpp  FeedForward.cpp  Functions.cpp  KatyushaLayer.cpp  Layer.cpp  Matrix.cpp  SequentialLayer.cpp  main.cpp  result.txt  tester.py
HebbianLearningRule/: hebb.h  main  main.cpp
ReinforcementLearning/: bandit.cpp  gpo.cpp  main  run.sh
